<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <ImageView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:id="@+id/imageView_bg" />

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_height="@dimen/set_editbox_high"
            android:layout_width="match_parent"
            android:background="@color/primary_material_dark"
            android:layout_alignParentTop="true"
            android:id="@+id/header_ch"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <ImageView
                android:layout_height="@dimen/set_editbox_high"
                android:layout_width="@dimen/set_editbox_high"
                android:scaleType="centerCrop"
                android:paddingRight="@dimen/layout_page_padding"
                android:layout_marginLeft="@dimen/layout_page_padding_all"
                android:src="@drawable/abc_btn_radio_to_on_mtrl_000"
                android:id="@+id/icon_dir" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:paddingRight="@dimen/padding_small"
                android:layout_weight="1"
                android:textSize="@dimen/medium_page_text_sizes"
                android:paddingLeft="@dimen/layout_page_padding"
                android:textColor="#FFFFFF"
                android:layout_gravity="center_vertical"
                android:id="@+id/header_txt"
                android:text="Dir???" />

        </LinearLayout>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:id="@+id/footer2">

                </LinearLayout>

        <LinearLayout
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:layout_below="@+id/header_ch"
            android:layout_above="@+id/footer2"
            android:paddingBottom="@dimen/layout_page_tm"
            android:paddingTop="@dimen/layout_page_tm"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:orientation="horizontal"
                android:layout_weight="3">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    app:cardBackgroundColor="@android:color/transparent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/padding_extra_extra_large"
                    android:id="@+id/anim_c"
                    android:layout_marginRight="@dimen/padding_extra_extra_large"
                    app:cardCornerRadius="10dp">

                    <zzh.source.srceng.ui.widget.blur.BlurView
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        app:cornerRadius="10dp"
                        app:blurOverlayColor="#50FFFFFF"
                        android:id="@+id/blurView">

                        <ScrollView
                            android:layout_height="fill_parent"
                            android:layout_width="fill_parent"
                            android:fillViewport="true"
                            android:layout_marginRight="@dimen/layout_page_rl"
                            android:scrollbarThumbVertical="@drawable/custom_scrollbar_thumb">

                            <LinearLayout
                                android:layout_height="match_parent"
                                android:layout_width="match_parent"
                                android:orientation="vertical"
                                android:id="@+id/bodych">

                                </LinearLayout>

                        </ScrollView>

                    </zzh.source.srceng.ui.widget.blur.BlurView>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:padding="@dimen/padding_large"
                android:layout_marginLeft="@dimen/layout_page_rl"
                android:layout_marginRight="@dimen/layout_page_rl"
                android:background="@drawable/tab_home_nvg_bg"
                android:layout_weight="1">
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_alignParentBottom="true"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/layout_page_padding_all"
                            android:text="@string/set_dir_act_other"
                            android:layout_width="wrap_content" />

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/layout_page_padding_all"
                            android:text="@string/set_dir_act_mode"
                            android:layout_width="wrap_content" />

                    </LinearLayout>

                    <android.widget.Button
                        android:layout_height="@dimen/set_editbox_high"
                        android:layout_width="match_parent"
                        android:background="@drawable/button_different_set"
                        android:textColor="#FFFFFF"
                        android:id="@+id/button_choice"
                        android:layout_marginTop="@dimen/layout_page_padding_all"
                        android:text="@string/srceng_dir_choice_btn" />
                    <android.widget.Button
                        android:layout_height="@dimen/set_editbox_high"
                        android:layout_marginTop="@dimen/layout_page_padding_all"
                        android:layout_width="match_parent"
                        android:background="@drawable/button_different_set"
                        android:textColor="#FFFFFF"
                        android:id="@+id/button_back_launcher"
                        android:text="@string/srceng_launcher_cancel" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
